--- a/partials/view.phtml
+++ b/partials/view.phtml
@@ -85,6 +85,12 @@ if ($__aid && $__algorithm && ($__public || $__owner || $__rights > 0)):
         'shortCircuit': <?= SHORT_CIRCUIT ?>,
         'maxRandInt': <?= MAX_RANDOM_INT ?>
     };
+    window.defaults.init = {
+        'custom': "<?= VarValue::CUSTOM_INIT ?>",
+        'random': "<?= VarValue::RANDOM_INIT ?>",
+        'param': "<?= VarValue::PARAMETER_INIT ?>",
+        'no': "<?= VarValue::NO_INIT ?>"
+    };
     window.defaults.execute = {
         'all': "<?= BlockNode::EXECUTE_ALL ?>",
         'any': "<?= BlockNode::EXECUTE_ANY ?>"
