--- a/partials/edit.phtml
+++ b/partials/edit.phtml
@@ -9,6 +9,12 @@ require_once(BASEDIR . 'partials/headers/algorithmHeader.phtml');
         <?= $l10n['edit_algo'] ?>
         <span id="saveSuccess" class="label label-success" style="display: none"></span>
     </h1>
+    <?php if (!is_null($originalAid = $__algorithm->original)): $original = $__model->fetchAlgorithm($originalAid) ?>
+    <p>
+        <i class="fa fa-code-fork"></i>
+        <?= $l10n['derived'] ?> <a href="<?= url(['action' => 'view', 'aid' => $originalAid]) ?>"><?= $original->name ?></a>
+    </p>
+    <?php endif ?>
 </div>
 
 <!-- CONTENT -->
