--- a/partials/user.phtml
+++ b/partials/user.phtml
@@ -26,9 +26,10 @@ if (isset($_GET['uid'])) {
     ?>
     <!-- HEADER -->
     <div class="page-header">
-        <h1><?= $user->username ?></h1>
-
-        <p><?= sprintf($l10n['member_since'], date_create($user->date_registration)->format('F j, Y')) ?></p>
+        <h1>
+            <?= $l10n['user'] ?>
+            <small><?= $user->username ?></small>
+        </h1>
     </div>
     <!-- HEADER END -->
 
@@ -51,7 +52,7 @@ if (isset($_GET['uid'])) {
             <div class="well">
                 <h3><?= $l10n['algorithms'] ?></h3>
                 <?php if ($algorithms): ?>
-                    <table class="table table-striped table-hover algorithms">
+                    <table class="table table-sortable algorithms">
                         <tbody>
                         <?php foreach ($algorithms as $algorithm): $link = url(['action' => 'view', 'aid' => $algorithm['aid']]) ?>
                             <tr>
@@ -79,9 +80,10 @@ if (isset($_GET['uid'])) {
                             </tr>
                         <?php endforeach ?>
                         </tbody>
-                        <tfoot>
-                        <!-- TODO: paginator -->
-                        </tfoot>
+                        <?php
+                            $colCount = 1;
+                            require(BASEDIR . 'partials/partials/table_foot.phtml');
+                        ?>
                     </table>
                 <?php else: ?>
                     <div><?= $l10n['no_algorithms'] ?></div>
@@ -92,6 +94,21 @@ if (isset($_GET['uid'])) {
 
         <!-- RIGHT COLUMN -->
         <div class="col-md-6">
+            <div class="well">
+                <?php
+                $countAll = $__model->countAlgorithmsOfUser($user->uid, true);
+                $countPublic = $__model->countAlgorithmsOfUser($user->uid);
+                $countForked = $__model->countAlgorithmsOfUser($user->uid, true, true);
+                ?>
+                <h3><?= $user->username ?></h3>
+                <p><?= sprintf($l10n['member_since'], date_create($user->date_registration)->format('F j, Y')) ?></p>
+                <hr/>
+                Total number of algorithms: <?= $countAll ?>
+                <ul>
+                    <li><i class="fa fa-lock"></i> Number of private algorithms: <?= $countAll - $countPublic ?></li>
+                    <li><i class="fa fa-code-fork"></i> Number of copied algorithms: <?= $countForked ?></li>
+                </ul>
+            </div>
             <?php if ($ownAccount): ?>
                 <div class="well">
                     <h3><?= $l10n['account_settings'] ?></h3>
