Called functions linked, symbols for random vars added

--- a/css/edit.css
+++ b/css/edit.css
@@ -133,6 +133,9 @@
 .algorithm ul .node.function-node .act-pars-container {
   display: inline-block;
 }
+.algorithm ul .node.function-node a {
+  color: #444;
+}
 .algorithm ul .node.if-node > table > tbody > tr > td.node-box {
   background-color: #f0fae9;
 }
