--- a/css/node.less
+++ b/css/node.less
@@ -117,6 +117,9 @@
         .act-pars-container {
           display: inline-block;
         }
+        a {
+          color: #444;
+        }
       }
       &.if-node {
         .nodeStyle(@structure-color);
