--- a/css/view.less
+++ b/css/view.less
@@ -98,14 +98,8 @@
     padding: 6px 1px;
     width: 42px;
   }
-  .parameter-icon {
-    display: none;
-  }
-  .parameter {
-    .parameter-icon {
-      display: inline-block;
-      float: right;
-    }
+  .var-icon {
+    float: right;
   }
 }
 
