--- a/css/edit.less
+++ b/css/edit.less
@@ -27,6 +27,10 @@
     margin-top: 0;
     margin-bottom: 10px;
     text-align: left;
+
+    .form-group {
+      padding: 1px;
+    }
     td > div {
       display: inline-flex;
     }
@@ -42,17 +46,14 @@
     }
     .form-group {
       margin: 0;
-      width: 100px;
     }
     .equals-group {
-      width: 35px;
       .equals {
         border: none;
         cursor: default;
       }
     }
     .size-group {
-      width: 55px;
     }
   }
 }
