Tiny fixes for the final presentation

--- a/partials/user.phtml
+++ b/partials/user.phtml
@@ -82,7 +82,7 @@ if (isset($_GET['uid'])) {
                         </tbody>
                         <?php
                             $colCount = 1;
-                            require(BASEDIR . 'partials/partials/table_foot.phtml');
+                            // require(BASEDIR . 'partials/partials/table_foot.phtml');
                         ?>
                     </table>
                 <?php else: ?>
